sucessfully get the callback from the online server

--- a/lib/app.json
+++ b/lib/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
-    "index/index"
+    "pages/index/index",
+    "pages/todos/todos"
   ],
   "window": {
     "backgroundTextStyle": "light",
