--- a/app.json
+++ b/app.json
@@ -1,11 +1,24 @@
 {
   "pages": [
-    "index/index"
+    "pages/index/index",
+    "pages/todos/todos"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar":{
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/todos/todos",
+        "text": "ToDos"
+      }
+    ]
   }
 }
